[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sololib"
version = "0.3.6"
description = "A simple Python library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "nacos-sdk-python>=3.0.4",
    "packaging>=26.0",
    "pydantic",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
image = [
    "numpy",
    "opencv-python",
]
win32 = [
    "psutil",
    "pywin32",
]

[project.scripts]
sololib = "sololib:main"
