[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sololib"
version = "0.3.7.2"
description = "Python toolkit for corpus generation, utility functions, and Nacos config center"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["corpus", "nacos", "utilities", "async", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "nacos-sdk-python>=3.0.4",
    "packaging>=26.0",
    "pydantic",
    "pyyaml>=6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["sololib"]

[project.optional-dependencies]
image = [
    "numpy",
    "opencv-python",
]
win32 = [
    "psutil",
    "pywin32",
]

[project.scripts]
sololib = "sololib:main"
